# sagemaker-testing

./: Makefile  out.txt  pyproject.toml
src/sagemaker_testing/: main.py
