[project]
name = "sagemaker-testing"
version = "0.1.0"
description = ""
authors = [
    {name = "Keigo Healy",email = "afkhealy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "sagemaker<3.0.0",
    "jupyter (>=1.1.1,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pqdm (>=0.2.0,<0.3.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "torchcodec (>=0.8.1,<0.9.0)",
    "boto3 (>=1.42.5,<2.0.0)"
]

[tool.poetry]
packages = [{include = "sagemaker_testing", from = "src"}]

[tool.poetry.scripts]
deploy = "src.sagemaker_testing.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"